Atualização do nome Contato

--- a/contato.html
+++ b/contato.html
@@ -11,7 +11,7 @@
     <header> 
         <img class='imgTopo' src="imagens/Captura de tela 2024-04-04 211253.png" alt ="imagem de um cachorro e gato">
         <img src="imagens/Captura de tela 2024-04-04 210715.png" alt="logo da AEP">
-        <h1 class="aep" >AEP - Contato</h1>
+        <h1 class="aep" >AEP</h1>
         <nav class="menu">
           <ul>
             <a href="index.html">Home </a>
