--- a/adocaodecaes.html
+++ b/adocaodecaes.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/adocaodecaes.css">
-  <script src="js/script.js"></script>
+  <script src="js/script.js" defer></script>
   <title>AEP- Adoção de Caes</title>
 </head>
 <body>
@@ -30,7 +30,7 @@
                   <h2> Cachorros Disponíveis Para Adoção</h2>
                 </div>
 
-                <div class="adocaoDeCaes">
+                <div class="divCaes">
 
                   <section>
                     <div class="caesAdotar">
@@ -49,8 +49,9 @@
                   </div>                
                   </div>
               </section>
+              </div>
 
-                </div>
+              </main>
 
                       <footer>
                         <p>&copy; 2024 - Todos os direitos reservados - AEP</p>
@@ -65,6 +66,6 @@
                         </nav>
                       </footer>
 
-                    </main>
+  
         </body>
           </html>
