Criação de JS para página Adoção de gatos

--- a/adocaodecaes.html
+++ b/adocaodecaes.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/adocaodecaes.css">
-  <script src="js/script.js" defer></script>
+  <script src="js/adocaodecaes.js" defer></script>
   <title>AEP- Adoção de Caes</title>
 </head>
 <body>
@@ -24,32 +24,19 @@
           </ul>
         </nav>
             </header>
-            <main>
 
                   <div id="titulo">
                   <h2> Cachorros Disponíveis Para Adoção</h2>
                 </div>
 
+                <main>
+
                 <div class="divCaes">
 
-                  <section>
-                    <div class="caesAdotar">
-                    <img src="imagens/RAUL.png">
-                  <ul>
-                   <h2> Ramiro</h2>
-                   <li> Raça: Pit Bull</li>
-                   <li>Idade: Adulto</li>
-                   <li> Gênero: Macho</li>
-                   <li> Porte: Grande</li>
-                   <li> Castrado:SIM</li>
-                   <li> Temperamento: Brincalhão</li>
-                  </ul>
-                  <div class= "linkAdotar">
-                    <a href="entre.html"> Quero adotar</a>
-                  </div>                
-                  </div>
-              </section>
-              </div>
+                <section>
+                <div class="caesAdotar">
+                </section>
+                </div>
 
               </main>
 
